--- a/Layer/Views/Order/GetInsertDialog.cshtml
+++ b/Layer/Views/Order/GetInsertDialog.cshtml
@@ -20,11 +20,12 @@
         </tr>
         <tr>
             <th>
-                (*)@Html.LabelFor(model => model.Orderdate, htmlAttributes: new { @class = "control-label col-md-2" })
+                (*)@Html.LabelFor(model => model.OrderDate, htmlAttributes: new { @class = "control-label col-md-2" })
             </th>
             <th>
-                @Html.TextBoxFor(model => model.Orderdate, new { @type = "date" })
-                @Html.ValidationMessageFor(model => model.Orderdate, "", new { @class = "text-danger" })
+                @Html.TextBoxFor(model => model.OrderDate, new { @type = "date" })
+                @Html.ValidationMessageFor(model => model.OrderD
+           ate, "", new { @class = "text-danger" })
             </th>
             <th>
                 (*)@Html.LabelFor(model => model.RequiredDate, htmlAttributes: new { @class = "control-label col-md-2" })
