--- a/Layer/Styles/order.css
+++ b/Layer/Styles/order.css
@@ -1,10 +1,3 @@
-﻿/*#insertTable {
-    margin: 0 0 -1.5em;
-    padding: 30px;
-    width: 80%
+﻿.required {
+    color:red
 }
-
-#insertTable tr {
-    list-style: none;
-    padding-bottom: 1.5em;
-}*/
