--- a/Layer/Views/Shared/_Layout.cshtml
+++ b/Layer/Views/Shared/_Layout.cshtml
@@ -7,6 +7,13 @@
     <title>@ViewBag.Title - ASP.NET新刪修查</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <link href="~/Styles/order.css" rel="stylesheet" />
+    <link href="http://kendo.cdn.telerik.com/2017.1.118/styles/kendo.common.min.css" rel="stylesheet" />
+    <link href="http://kendo.cdn.telerik.com/2017.1.118/styles/kendo.metro.min.css" rel="stylesheet" />
+    @*<link href="~/Styles/kendo.css" rel="stylesheet" />*@
+    <script src="http://kendo.cdn.telerik.com/2017.1.118/js/jquery.min.js"></script>
+    <script src="http://kendo.cdn.telerik.com/2017.1.118/js/kendo.all.min.js"></script>
+    <script src="~/Scripts/kendoUI.js"></script>
 
 </head>
 <body>
